syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glegoux.examples.hello";
option java_outer_classname = "HelloProto";
option objc_class_prefix = "HLW";

package hello;

service Hello {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}